@@ -146,6 +146,8 @@ PHP 8.3 UPGRADE NOTES
   . pg_fetch_object now raises a ValueError instead of an Exception when the constructor_args
     argument is non empty with the class not having constructor.
   . pg_insert now raises a ValueError instead of a WARNING when the table specified is invalid.
+  . pg_insert and pg_convert raises a ValueError or a TypeError instead of a WARNING when the
+    value/type of a field does not match properly with a PostGreSQL's type.
 
 - Standard:
   . E_NOTICEs emitted by unserialize() have been promoted to E_WARNING.
