@@ -57,7 +57,13 @@ $i = 0;
 $errors = 0;
 foreach ($ips as $ip) {
     $data = array("id" => ++$i, "remote_addr" => $ip);
-    $r = @pg_insert($db, 'tmp_statistics', $data);
+    $r = true;
+    try {
+    	@pg_insert($db, 'tmp_statistics', $data);
+    } catch (\ValueError $e) {
+        echo $e->getMessage() . PHP_EOL;
+        $r = false;
+    }
 
     if (!$r && in_array($ip, $bad)) {
         $errors++;
@@ -79,6 +85,13 @@ pg_close($db);
 
 ?>
 --EXPECT--
+pg_insert(): Field "remote_addr" must be a valid IPv4 or IPv6 address string, "256.257.258.259" given
+pg_insert(): Field "remote_addr" must be a valid IPv4 or IPv6 address string, "fe08::7:8interface" given
+pg_insert(): Field "remote_addr" must be a valid IPv4 or IPv6 address string, "schnitzel" given
+pg_insert(): Field "remote_addr" must be a valid IPv4 or IPv6 address string, "10002.3.4" given
+pg_insert(): Field "remote_addr" must be a valid IPv4 or IPv6 address string, "1.2.3.4.5" given
+pg_insert(): Field "remote_addr" must be a valid IPv4 or IPv6 address string, "256.0.0.0" given
+pg_insert(): Field "remote_addr" must be a valid IPv4 or IPv6 address string, "260.0.0.0" given
 array(2) {
   [0]=>
   string(1) "1"
