@@ -141,6 +141,8 @@ PHP                                                                        NEWS
   . pg_trace new PGSQL_TRACE_SUPPRESS_TIMESTAMPS/PGSQL_TRACE_REGRESS_MODE
     contants support. (David Carlier)
   . pg_set_error_verbosity adding PGSQL_ERRORS_STATE constant. (David Carlier)
+  . pg_convert/pg_insert E_WARNING on type errors had been converted to
+    ValueError/TypeError exceptions. (David Carlier)
 
 - Phar:
   . Fix memory leak in phar_rename_archive(). (stkeke)
